Table ALUNO {
  id_aluno INTEGER [pk]
  nm_aluno VARCHAR(255) [not null]
  cd_cpf_aluno CHAR(11) [not null, unique]
  dt_nascimento_aluno DATE [not null]
  nm_email_aluno VARCHAR(255) [not null, unique]
  nm_endereco_aluno VARCHAR(255) [not null]
  cd_situacao_aluno NUMBER(4) [not null]
}

Table PROFESSOR {
  id_professor INTEGER [pk]
  nm_professor VARCHAR(255) [not null]
  cd_cpf_professor CHAR(11) [not null, unique]
  nm_email_professor VARCHAR(255) [not null, unique]
  nm_especialidade_professor VARCHAR(255) [not null]
  dt_admissao_professor DATE [not null]
  dt_demissao_professor DATE
}

Table CURSO {
  id_curso INTEGER [pk]
  sg_curso VARCHAR(10) [not null]
  nm_curso VARCHAR(255) [not null]
  ds_curso VARCHAR(255)
  cd_periodo_curso NUMBER(4) [not null]
  qt_carga_horaria_curso NUMBER(4) [not null]
  qt_semestre_curso NUMBER(2) [not null]
  cd_modalidade_curso NUMBER(4) [not null]
  dt_desativacao_curso DATE
}

Table DISCIPLINA {
  id_disciplina INTEGER [pk]
  sg_disciplina VARCHAR(16) [not null]
  nm_disciplina VARCHAR(255) [not null]
  ds_disciplina VARCHAR(255)
  qt_carga_horaria_disciplina NUMBER(4) [not null]
  dt_desativacao_disciplina DATE
}

Table COMPONENTE_CURRICULAR {
  id_componente_curricular INTEGER [pk]
  id_ciclo_componente_curricular NUMBER(2) [not null]
  id_curso INTEGER [not null, ref: > CURSO.id_curso]
  id_disciplina INTEGER [not null, ref: > DISCIPLINA.id_disciplina]
  id_professor INTEGER [not null, ref: > PROFESSOR.id_professor]

  indexes {
    (id_curso, id_disciplina, id_ciclo_componente_curricular) [unique, name: 'uk_componente_curricular']
  }
}

Table GRADE_CURSO {
  id_grade_curso INTEGER [pk]
  dd_semana_grade_curso CHAR(3) [not null]
  hr_inicio_grade_curso NUMBER(4) [not null] // NUMBER(4): minutos depois da meia noite
  cd_sala_grade_curso VARCHAR(20) [not null]
  id_componente_curricular INTEGER [not null, ref: > COMPONENTE_CURRICULAR.id_componente_curricular]

  indexes {
    (dd_semana_grade_curso, hr_inicio_grade_curso,cd_sala_grade_curso) [unique, name: 'uk_grade_curso']
  }
  checks {
    `hr_inicio_grade_curso BETWEEN 0 AND 1440` [name: 'ck_hora_grade_curso']
  }
}

Table PERIODO_LETIVO {
  id_periodo_letivo INTEGER [pk]
  aa_periodo_letivo NUMBER(4) [not null]
  id_semestre_periodo_letivo NUMBER(1) [not null]
  indexes {
    (aa_periodo_letivo,id_semestre_periodo_letivo) [unique, name: 'uk_periodo_letivo']
  }
  checks {
    `id_semestre_periodo_letivo IN (1,2)` [name: 'chk_semestre']
  }
}

Table TURMA {
  id_turma INTEGER [pk]
  qt_vagas_turma NUMBER(3) [not null]
  id_ciclo_turma NUMBER(2) [not null]

  id_curso INTEGER [not null, ref: > CURSO.id_curso]
  id_disciplina INTEGER [not null, ref: > DISCIPLINA.id_disciplina]
  id_professor INTEGER [not null, ref: > PROFESSOR.id_professor]
  id_periodo_letivo INTEGER [not null, ref: > PERIODO_LETIVO.id_periodo_letivo]

  indexes {
    (id_curso, id_disciplina, id_ciclo_turma, id_periodo_letivo) [unique, name: 'uk_turma']
  }
}

Table MATRICULA {
  id_matricula INTEGER [pk]
  id_aluno INTEGER [not null, ref: > ALUNO.id_aluno]
  id_turma INTEGER [not null, ref: > TURMA.id_turma]
  indexes {
    (id_turma, id_aluno) [unique, name: 'uk_matricula']
  }
}

Table GRADE_TURMA {
  id_grade_turma INTEGER [pk]
  dd_semana_grade_turma CHAR(3) [not null]
  hr_inicio_grade_turma NUMBER(4) [not null] // NUMBER(4): minutos depois da meia noite
  cd_sala_grade_turma VARCHAR(20) [not null]
  id_turma INTEGER [not null, ref: > TURMA.id_turma]

  checks {
    `dd_semana_grade_turma IN ('SEG', 'TER', 'QUA', 'QUI', 'SEX', 'SAB', 'DOM')` [name: 'ck_dia_semana']
    `hr_inicio_grade_turma BETWEEN 0 AND 1440` [name: 'ck_hora_grade_turma']
  }

  indexes {
    (dd_semana_grade_turma,hr_inicio_grade_turma,cd_sala_grade_turma,id_turma) [unique, name: 'uk_grade_turma']
  }
}


Table AVALIACAO {
  id_avaliacao INTEGER [pk]

  ds_avaliacao VARCHAR(255)
  qt_peso_avaliacao NUMBER(3,1) [not null]
  qt_nota_maxima_avaliacao NUMBER(4,2) [not null]
  dt_hr_avaliacao DATE [not null]
  cd_tipo_avaliacao NUMBER(4) [not null]

  id_turma INTEGER [not null, ref: > TURMA.id_turma]

  indexes {
    (id_turma, dt_hr_avaliacao) [unique, name: 'uk_avaliacao']
  }
}

Table AVALIACAO_RESULTADO {
  id_matricula INTEGER [not null, ref: > MATRICULA.id_matricula]
  id_avaliacao INTEGER [not null, ref: > AVALIACAO.id_avaliacao]
  qt_nota_avaliacao_aluno NUMBER(4,2) [not null]

  indexes {
    (id_avaliacao, id_matricula) [pk]
  }
}

Table REGISTRO_AULA {
  dt_registro_aula DATE [not null]
  id_grade_turma INTEGER [not null, ref: > GRADE_TURMA.id_grade_turma]

  indexes {
    (dt_registro_aula, id_grade_turma) [pk]
  }
  checks {
    `dt_registro_aula=TRUNC(dt_registro_aula)` [name: 'ck_date_only']
  }
}


Table REGISTRO_AULA_MATRICULA {
  id_matricula INTEGER [not null, ref: > MATRICULA.id_matricula]
  dt_registro_aula DATE [not null]
  id_grade_turma INTEGER [not null]
  ic_presente_ausente NUMBER(1) [not null, default: 1]

  indexes {
    (dt_registro_aula, id_grade_turma, id_matricula) [pk]
  }
}
Ref: REGISTRO_AULA_MATRICULA.(dt_registro_aula, id_grade_turma)
    > REGISTRO_AULA.(dt_registro_aula, id_grade_turma)
